--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build-prod": "browserify src/app.js -t [ babelify ] | uglifyjs -c -o public/dist/app.min.js",
+    "build": "browserify src/app.js -d -o public/dist/app.js -t [ babelify ]"
   },
   "repository": {
     "type": "git",
@@ -17,9 +19,26 @@
     "url": "https://github.com/carlyne/beer-cookbook/issues"
   },
   "homepage": "https://github.com/carlyne/beer-cookbook#readme",
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
+  },
   "dependencies": {
     "@kevinbalicot/custom-element": "^1.1.0",
     "dotenv": "^8.2.0",
     "yion": "^1.3.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/runtime": "^7.11.2",
+    "babelify": "^10.0.0",
+    "browserify": "^16.5.2",
+    "uglify-es": "^3.3.9"
   }
 }
