--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "build-prod": "browserify src/app.js -t [ babelify ] | uglifyjs -c -o public/dist/app.min.js",
-    "build": "browserify src/app.js -d -o public/dist/app.js -t [ babelify ]"
+    "build": "browserify src/app.js -d -o public/dist/app.js -t [ babelify ]",
+    "scss" : "node-sass --watch public/styles/scss -o public/styles/css"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   "dependencies": {
     "@kevinbalicot/custom-element": "^1.1.0",
     "dotenv": "^8.2.0",
+    "node-sass": "^4.14.1",
     "yion": "^1.3.2"
   },
   "devDependencies": {
