--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@kevinbalicot/custom-element": "^1.1.0",
+    "boxstore": "^0.5.0",
     "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
     "yion": "^1.3.2"
